Coverity analysis defect 114629: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Service arch 2020-11-30
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/executor/remote_command_request.h:90: UNINIT_CTOR 114629 Class member declaration for "fireAndForgetMode".
      /src/mongo/executor/remote_command_request.cpp:100: UNINIT_CTOR 114629 Non-static class member "fireAndForgetMode" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Billy Donahue
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: