SERVER-51344 default init for fireAndForgetMode